--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/swagger-ui-dist@4.14.1/swagger-ui.css"
 		/>
-		<link rel="shortcut icon" href="https://fastapi.tiangolo.com/img/favicon.png" />
-		<title>FastAPI - Swagger UI</title>
+		<link rel="shortcut icon" href="./favicon.ico" />
+		<title>TintAPI2 Docs</title>
 	</head>
 	<body>
 		<div id="swagger-ui"></div>
