--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link
-			type="text/css"
-			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/swagger-ui-dist@4.14.1/swagger-ui.css"
-		/>
-		<link rel="shortcut icon" href="./favicon.ico" />
-		<title>TintAPI2 Docs</title>
-	</head>
-	<body>
-		<div id="swagger-ui"></div>
-		<script src="https://cdn.jsdelivr.net/npm/swagger-ui-dist@4.14.1/swagger-ui-bundle.js"></script>
-		<!-- `SwaggerUIBundle` is now available on the page -->
-		<script>
-			const ui = SwaggerUIBundle({
-				url: "/openapi.json",
-				oauth2RedirectUrl: window.location.origin + "/docs/oauth2-redirect",
-				dom_id: "#swagger-ui",
-				presets: [SwaggerUIBundle.presets.apis, SwaggerUIBundle.SwaggerUIStandalonePreset],
-				layout: "BaseLayout",
-				deepLinking: true,
-				showExtensions: true,
-				showCommonExtensions: true,
-			});
-		</script>
-	</body>
+
+<head>
+	<link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swagger-ui-dist@4.14.1/swagger-ui.css" />
+	<link rel="shortcut icon" href="./favicon.ico" />
+	<title>TintAPI2 Docs</title>
+</head>
+
+<body>
+	<div id="swagger-ui"></div>
+	<script src="https://cdn.jsdelivr.net/npm/swagger-ui-dist@4.15.5/swagger-ui-bundle.js"></script>
+	<!-- `SwaggerUIBundle` is now available on the page -->
+	<script>
+		const ui = SwaggerUIBundle({
+			url: "/openapi.json",
+			oauth2RedirectUrl: window.location.origin + "/docs/oauth2-redirect",
+			dom_id: "#swagger-ui",
+			presets: [SwaggerUIBundle.presets.apis, SwaggerUIBundle.SwaggerUIStandalonePreset],
+			layout: "BaseLayout",
+			deepLinking: true,
+			showExtensions: true,
+			showCommonExtensions: true,
+		});
+	</script>
+</body>
+
 </html>
