prevent page navigation

--- a/public/dot.html
+++ b/public/dot.html
@@ -124,7 +124,7 @@
         </form>
         <div>
             <h2 style="margin: 18px 0 19px;">Result: <span id="response-time"></span></h2>
-            <iframe id="result" width="500" height="400" lang="en-US" frameborder="0"></iframe>
+            <iframe id="result" width="500" height="400" lang="en-US" frameborder="0" onload="return false;"></iframe>
             <br><br>
             <button onclick="result.src && window.open(result.src, '_blank')">Open in new tab</button>
         </div>
