--- a/public/dot.html
+++ b/public/dot.html
@@ -62,8 +62,10 @@
         }
 
         button {
+            display: block;
             width: 500px;
             height: 50px;
+            margin: 5px 0;
         }
 
         iframe {
@@ -101,7 +103,7 @@
 <body>
     <a href="/">Go to Docs</a><br><br>
     <div style="display: flex; gap: 20px; flex-wrap: wrap;">
-        <form onsubmit="handleOnSubmit(event)">
+        <form id="form" onsubmit="handleOnSubmit(event)">
             <select name="layout">
                 <option selected value="sfdp">sfdp</option>
                 <option value="dot">dot</option>
@@ -118,9 +120,14 @@
                 <option value="jpg">JPG</option>
             </select>
             <br><br>
-            <textarea name="dot" placeholder="graph test { }">graph test { a -- b }</textarea>
+            <textarea name="dot" oninput="localStorage.setItem('dot', event.currentTarget.value)"
+                placeholder="graph test { ... }">graph test { a -- b }</textarea>
+            <script>
+                form.dot.value = localStorage.getItem("dot")
+            </script>
             <br><br>
             <button>Submit <div id="loading" class="loading-ring" hidden></div></button>
+            <button type="reset">Reset</button>
         </form>
         <div>
             <h2 style="margin: 18px 0 19px;">Result: <span id="response-time"></span></h2>
